# AdventOfCode

./: .gitignore  flake.nix  pyproject.toml
2023/01/: trebuchet.py
2023/02/: cubes.py
2023/03/: engine.py
2023/04/: scratchcards.py
2023/05/: seeds.py
2023/06/: boatrace.py
2023/08/: map.py
2023/10/: pipes.py
2023/11/: observatory.py
2023/12/: springs.py
2023/13/: mirrors.py
2023/14/: dish.py
2023/15/: library.py
2023/16/: lava.py
2023/17/: crucible.py
2023/18/: hole.py
2023/19/: workflows.py
2023/20/: pulses.py
2023/21/: gardensteps.py
2023/22/: sandbricks.py
2023/23/: hiking.py
2023/24/: hailstorms.py
2023/25/: wires.py
2024/01/: locations.py
2024/02/: reactor.py
2024/03/: memorymul.py
2024/04/: wordsearch.py
2024/05/: pages.py
2024/06/: guard.py
2024/07/: operators.py
2024/08/: antinodes.py
2024/09/: defrag.py
2024/10/: trails.py
2024/11/: pebbles.py
2024/12/: garden.py
2024/13/: claws.py
2024/14/: robots.py
2024/15/: warehouse.py
2024/16/: maze.py
2024/17/: computer.py
2024/18/: ram.py
2024/19/: towels.py
2024/20/: race.py
2024/21/: controls.py
2024/22/: market.py
2024/23/: lanparty.py
2024/24/: wires.py
2024/25/: locks.py
2025/01/: safe.py
2025/02/: ids.py
2025/03/: batteries.py
2025/04/: forklifts.py
2025/05/: ingredients.py
2025/06/: math.py
2025/07/: tachyons.py
2025/08/: junctions.py
2025/09/: floor.py
2025/10/: indicators.py
2025/11/: reactor.py
2025/12/: presents.py
7/: camelcard.py
9/: oasis.py
