[tool.black]
line-length = 100

[tool.pylint."messages control"]

# Disable the message, report, category or checker with the given id(s). You can
# either give multiple identifiers separated by comma (,) or put this option
# multiple times (only on the command line, not in the configuration file where
# it should appear only once). You can also use "--disable=all" to disable
# everything first and then re-enable specific checks. For example, if you want
# to run only the similarities checker, you can use "--disable=all
# --enable=similarities". If you want to run only the classes checker, but have
# no Warning level messages displayed, use "--disable=all --enable=classes
# --disable=W".
disable = [
    "raw-checker-failed",
    "bad-inline-option",
    "locally-disabled",
    "file-ignored",
    "suppressed-message",
    "useless-suppression",
    "deprecated-pragma",
    "use-symbolic-message-instead",
    "use-implicit-booleaness-not-comparison-to-string",
    "use-implicit-booleaness-not-comparison-to-zero",
    "missing-module-docstring",
    "missing-class-docstring",
    "missing-function-docstring",
    "consider-using-enumerate",
]

[tool.poetry]
package-mode = false

name = "aoc"
description = ""
authors = ["Timo Gottszky <timogottszky+git@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.13,!=3.14.1,<4.0"
matplotlib = "^3.10.8"
networkx = "^3.6.1"
numpy = "^2.3.5"
sympy = "^1.14.0"
scipy = "^1.16.3"
pygraphviz = "^1.14"

[tool.poetry.group.dev.dependencies]
black = "^25.12.0"
isort = "^7.0.0"
pylint = "^4.0.4"
types-networkx = "^3.6.1.20251210"
scipy-stubs = "^1.16.3.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
